src/objects/sfsp__SalesActivity__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Data__c</fullName>
        <description>JSON formatted supplemental data</description>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__RecordType__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Activities</relationshipLabel>
        <relationshipName>SalesNodeActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Activity</relationshipLabel>
        <relationshipName>SalesActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Subtype__c</fullName>
        <label>Sales Activity Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Type__c</fullName>
        <label>Sales Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                    <default>true</default>
                    <label>Management</label>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                    <label>Approval Process</label>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>